tests/samples/negative/control_flow/for_in_protocol_missing_has_next.ax
module for_in_protocol_missing_has_next;

struct BadIter {
    value: i32;
}

impl BadIter {
    fn next(self: &mut BadIter) -> i32 {
        return self.value;
    }
}

fn main() -> i32 {
    let iter: BadIter = BadIter { value: 1 };
    for value in iter {
        return value;
    }
    return 0;
}
